--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ankush.activity1">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,20 +20,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Main2Activity"
-            android:label="@string/title_activity_main2"
-            android:theme="@style/AppTheme" />
+            android:name=".LoadingScreen"
+            android:label="LOADING......"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".starting"
-            android:label="@string/title_activity_starting"
-            android:theme="@style/AppTheme" />
+            android:name=".Scanner"
+            android:label="Scanning....."
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Main3Activity"
-            android:label="@string/title_activity_main3"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".loader"
-            android:label="@string/title_activity_loader"
+            android:name=".LandingPage"
+            android:label="@string/title_activity_result"
             android:theme="@style/AppTheme"></activity>
     </application>
 
