--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
         <activity
             android:name=".LandingPage"
             android:label="@string/title_activity_result"
-            android:theme="@style/AppTheme"></activity>
-        <activity 
+            android:theme="@style/AppTheme" />
+        <activity
             android:name=".LoadingScreen"
             android:label="LOADING......"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -31,6 +31,22 @@
             android:name=".Scanner"
             android:label="Scanning....."
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AdminActivity"
+            android:label="@string/title_activity_admin"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ViewActivity"
+            android:label="@string/title_activity_view"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".SignupActivity"
+            android:label="@string/title_activity_signup"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".AddActivity"
+            android:label="@string/title_activity_add"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
